--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "append.countries('Malta') # add code here"
+    "countries('Malta') # add code here"
    ]
   },
   {
