Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,11 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to literal (<ipython-input-14-7c7619a36076>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-7c7619a36076>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    'New Mexico'='USA'\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to literal\n"
+     ]
+    }
+   ],
    "source": [
     "'New Mexico'='USA'"
    ]
