Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries(New Mexico''='USA'"
+    "countries('New Mexico')='USA'"
    ]
   },
   {
