Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,25 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "can't assign to function call (<ipython-input-17-bdfdfd27faac>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-bdfdfd27faac>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    countries('New Mexico')='USA'\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to function call\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries='USA'"
+    "countries[6]='USA'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +352,7 @@
        " 'Mexico',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'New Mexico',\n",
+       " 'USA',\n",
        " 'USA',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
@@ -371,7 +362,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
