Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,16 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[7]='USA'"
+    "countries[7]='Finland'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        " 'USA',\n",
        " 'Morocco',\n",
        " 'USA',\n",
-       " 'USA',\n",
+       " 'Finland',\n",
        " 'Argentina',\n",
        " 'Italy',\n",
        " 'Canada',\n",
@@ -362,7 +362,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
