Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = countrie"
+    "unique_countries = countries.set()"
    ]
   },
   {
