--- a/index.ipynb
+++ b/index.ipynb
@@ -513,7 +513,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = unique_countries - countries\n",
+    "num_of_repeats = lenunique_countries - countries\n",
     "num_of_repeats # 3"
    ]
   },
